--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
+    <meta property="og:locale" content="ko_KR">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="./resource/common/thealim_header_logo_back.png">
+    <meta property="og:site_name" content="TheAlim - 더알림, 구독형 알림">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     
   </head>
   <body>
+    <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-base64@3.6.1/base64.min.js"></script>
     <!-- naver -->
