--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
+    <!-- <meta property="og:title" content="test"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:url" content="http://rootree.net"/>
+    <meta property="og:description" content="This is a description."/>
+    <meta property="og:image" content="http://img.jpg"/> -->
     <meta property="og:locale" content="ko_KR">
+    <meta property="og:title" content="더알림, 구독형 알림"> 
+    <meta property="og:description" content="나한테 꼭 필요한 알림만 선택해서 구독!
+    보기 좋게 잘 정리된 알림목록">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="./resource/common/thealim_header_logo_back.png">
+    <meta property="og:image" content="http://mo.d-alim.com:18080/commonAssets/kakaoShareIcon.png">
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="627" />
     <meta property="og:site_name" content="TheAlim - 더알림, 구독형 알림">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
