--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,9 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     
   </head>
-  <body>
-    <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
+  <body><!-- 
+    <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script> -->
+    <script src="./commonAssets/kakaoLink/kakao.min.js"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-base64@3.6.1/base64.min.js"></script>
     <script src="https://cdn.jsdelivr.net/clipboard.js/1.5.3/clipboard.min.js"></script> 
