--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     <meta property="og:title" content="더알림, 구독형 알림">
     <meta property="og:description" content="나한테 꼭 필요한 알림만 선택해서 구독!
     보기 좋게 잘 정리된 알림목록">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="http://mo.d-alim.com:18080/commonAssets/kakaoShareIcon.png">
+    <meta property="og:type" content="website"><!-- 
+    <meta property="og:image" content="http3://mo.d-alim.com:9443/commonAssets/kakaoShareIcon.png"> -->
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
     <meta property="og:site_name" content="TheAlim - 더알림, 구독형 알림">
