--- a/public/index.html
+++ b/public/index.html
@@ -19,6 +19,13 @@
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
     <meta property="og:site_name" content="TheAlim - 더알림, 구독형 알림">
+
+    <!-- <meta name="appleid-signin-client-id" content="com.pushmsg.project"> -->
+    <meta name="appleid-signin-client-id" content="project.pushmsg.com">
+    <meta name="appleid-signin-scope" content="name email">
+    <meta name="appleid-signin-redirect-uri" content="https://mo.d-alim.com:9443">
+    <meta name="appleid-signin-state" content="signin">
+    <meta name="appleid-signin-use-popup" content="true">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
 
@@ -26,6 +33,7 @@
   <body><!--
     <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script> -->
     <script src="./commonAssets/kakaoLink/kakao.min.js"></script>
+    <script type="text/javascript" src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/js-base64@3.6.1/base64.min.js"></script>
     <script src="https://cdn.jsdelivr.net/clipboard.js/1.5.3/clipboard.min.js"></script>
@@ -44,6 +52,19 @@
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <script>
+      document.addEventListener('AppleIDSignInOnSuccess', (data) => {
+          //handle successful response
+          console.log(data)
+          
+      });
+      //Listen for authorization failures
+      document.addEventListener('AppleIDSignInOnFailure', (error) => {
+          //handle error.
+          console.log(error)
+      });
+
+    </script>
     <!-- // google -->
     <noscript>
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
