--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0">
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0" user-scalable="yes">
     <!-- <meta property="og:title" content="test"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://rootree.net"/>
