--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,7 @@
     <meta name="appleid-signin-use-popup" content="true">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
   </head>
   <body><!--
