--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     <meta property="og:image" content="http3://mo.d-alim.com/commonAssets/kakaoShareIcon.png">
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
-    <meta property="og:site_name" content="TheAlim - 더알림, 구독형 알림">
+    <meta property="og:site_name" content="DAlim - 더알림, 구독형 알림">
 
     <!-- <meta name="appleid-signin-client-id" content="com.pushmsg.project"> -->
     <meta name="appleid-signin-client-id" content="project.pushmsg.com">
