--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,6 @@
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-messaging.js"></script>
-
     <!-- jQuery -->
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.min.js" ></script>
     <!-- iamport.payment.js -->
@@ -80,10 +79,28 @@
           //handle error.
           console.log(error)
       });
+      
       var isMobile = /Mobi/i.test(window.navigator.userAgent)
       if(!isMobile) {
+        // App's Firebase configuration
+        /* const firebaseConfig = {
+        apiKey: 'AIzaSyCNLjqHR8F9kQKma056lThVIu5v2JsfSAg',
+        authDomain: 'thealim-2602c.firebaseapp.com',
+        projectId: 'thealim-2602c',
+        storageBucket: 'thealim-2602c.appspot.com',
+        messagingSenderId: '777053173385',
+        appId: '1:777053173385:web:46b92863d81076f61d3858',
+        measurementId: 'G-NHD2EKJML0'
+        }
+        // firebase.initializeApp(firebaseConfig);
+
+        !firebase.apps.length ? firebase.initializeApp(firebaseConfig) : firebase.app()
+
+        var messaging = firebase.messaging()
+        messaging.usePublicVapidKey('BKz1oF6HiJg6kscmJ2I0hil9fAsP68N0OrkQN7Vgo_DBQYPmnswNcIK7P71CFvKrdvwLRlemD-DfAppHIZfQ46g')
+         */
         if (navigator.serviceWorker) {
-        navigator.serviceWorker.register('/firebase-messaging-sw.js')
+            navigator.serviceWorker.register('./firebase-messaging-sw.js')
             .then(function (reg) { console.log('서비스워커 등록성공 :', reg) })
             .catch(function (error) { console.log('서비스워커 등록실패 :', error) })
         }
