--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <meta name="appleid-signin-redirect-uri" content="https://mo.d-alim.com">
     <meta name="appleid-signin-state" content="signin">
     <meta name="appleid-signin-use-popup" content="true">
+    <meta name="google-site-verification" content="i8Q6jb6KncZpNu34qjS7Fn3cQtgvYMx2yyD3KBkvT7k" />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <title><%= htmlWebpackPlugin.options.title %></title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
