--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,8 @@
   </head>
   <body><!--
     <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script> -->
+    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <script src="https://unpkg.com/vue-i18n@8"></script>
     <script src="./commonAssets/kakaoLink/kakao.min.js"></script>
     <script src="https://unpkg.com/vue"></script>
     <script type="text/javascript" src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js"></script>
