--- a/public/index.html
+++ b/public/index.html
@@ -15,30 +15,29 @@
     <meta property="og:description" content="This is a description."/>
     <meta property="og:image" content="http://img.jpg"/> -->
     <meta property="og:locale" content="ko_KR">
-    <meta property="og:title" content="더알림, 구독형 알림">
-    <meta property="og:description" content="나한테 꼭 필요한 알림만 선택해서 구독!
-    보기 좋게 잘 정리된 알림목록">
+    <meta property="og:title" content="Everything for Campus Life, uniBuzzy">
+    <meta property="og:description" content="Welcome to uniBuzzy, the cutting-edge social metaverse that redefines the way students connect, collaborate, and thrive within their academic communities. Designed with a visionary approach, uniBuzzy brings together the best aspects of existing platforms while transcending their limitations, offering an unparalleled experience that will truly elevate your university journey.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http3://mo.d-alim.com/commonAssets/kakaoShareIcon.png">
+    <meta property="og:image" content="	https://enchanting-stilton-519.notion.site/image/h…4864-8ddf-2352f3c253a5&width=250&userId=&cache=v2">
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
-    <meta property="og:site_name" content="DAlim - 더알림, 구독형 알림">
+    <meta property="og:site_name" content="Everything for Campus Life, uniBuzzy">
 
     <!-- <meta name="appleid-signin-client-id" content="com.pushmsg.project"> -->
-    <meta name="appleid-signin-client-id" content="project.pushmsg.com">
+    <meta name="appleid-signin-client-id" content="com.uniBuzzy.login">
     <meta name="appleid-signin-scope" content="name email">
-    <meta name="appleid-signin-redirect-uri" content="https://mo.d-alim.com">
+    <meta name="appleid-signin-redirect-uri" content="https://unibuzzy.com">
     <meta name="appleid-signin-state" content="signin">
     <meta name="appleid-signin-use-popup" content="true">
-    <meta name="google-site-verification" content="i8Q6jb6KncZpNu34qjS7Fn3cQtgvYMx2yyD3KBkvT7k" />
+    <!-- <meta name="google-site-verification" content="i8Q6jb6KncZpNu34qjS7Fn3cQtgvYMx2yyD3KBkvT7k" /> -->
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title>uniBuzzy,Everything for Campus Life</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
     <link rel="manifest" href="<%= BASE_URL %>manifest.json" crossorigin="use-credentials">
   </head>
   <body><!--
     <script src="//developers.kakao.com/sdk/js/kakao.min.js"></script> -->
-    <script src="https://unpkg.com/vue/dist/vue.js"></script>
+    <!-- <script src="https://unpkg.com/vue/dist/vue.js"></script> -->
     <script src="https://unpkg.com/vue-i18n@8"></script>
     <script src="./commonAssets/kakaoLink/kakao.min.js"></script>
     <script src="https://unpkg.com/vue"></script>
@@ -75,7 +74,7 @@
     <meta name="google-signin-client_id" content="777053173385-hp7otdoios6a7c0eb924bftbhoeuaat7.apps.googleusercontent.com">
     <script src="https://apis.google.com/js/platform.js" async defer></script>
 
-    <script src="https://accounts.google.com/gsi/client" async defer></script>
+    <!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
     <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-messaging.js"></script>
     <!-- jQuery -->
@@ -151,11 +150,11 @@
             // 권한 거절
             if(result == 'denied') {
                 Notification.requestPermission();
-                alert('알림을 차단하셨습니다.\n브라우저의 사이트 설정에서 변경하실 수 있습니다.');
+                alert('You have blocked the notification.\nYou can change it in your browser\'s site settings.');
                 return false;
             }
             else if (result == 'granted'){
-                console.log('알림을 허용하셨습니다.');
+                console.log('You have allowed notifications.');
                 
             }
         });
