--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
     <script src="https://cdn.jsdelivr.net/npm/platform@1.3.6/platform.min.js" async></script>
 
     <!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
-    <script src="https://cdn.jsdelivr.net/combine/npm/firebase@7.20.0/firebase.min.js,npm/firebase@7.20.0/firebase-messaging.min.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/combine/npm/firebase@7.20.0/firebase.min.js,npm/firebase@7.20.0/firebase-messaging.min.js"></script> -->
     <!-- <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase.js"></script> -->
     <!-- <script src="https://www.gstatic.com/firebasejs/7.20.0/firebase-messaging.js"></script> -->
     <!-- jQuery -->
