--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
     <!-- google -->
     <meta name="google-signin-scope" content="profile email">
     <meta name="google-signin-client_id" content="777053173385-hp7otdoios6a7c0eb924bftbhoeuaat7.apps.googleusercontent.com">
-    <script src="https://cdn.jsdelivr.net/npm/platform@1.3.6/platform.min.js" async></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/platform@1.3.6/platform.min.js" async></script> -->
 
     <!-- <script src="https://accounts.google.com/gsi/client" async defer></script> -->
     <!-- <script src="https://cdn.jsdelivr.net/combine/npm/firebase@7.20.0/firebase.min.js,npm/firebase@7.20.0/firebase-messaging.min.js"></script> -->
