Refactor: Reduce clipboard.js from `index.html`

--- a/public/index.html
+++ b/public/index.html
@@ -45,7 +45,7 @@
     <script type="text/javascript" src="https://appleid.cdn-apple.com/appleauth/static/jsapi/appleid/1/en_US/appleid.auth.js" async></script>
     <script type="text/javascript" src="https://t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js" async></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/js-base64@3.6.1/base64.min.js" async></script>
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clipboard@2.0.10/dist/clipboard.min.js" async></script>
+    <!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/clipboard@2.0.10/dist/clipboard.min.js" async></script> -->
 
     <!-- <script type="text/javascript" src="https://unpkg.com/vue-long-click@0.0.4/dist/libs/vue-long-click.umd.min.js" async></script> -->
     <!-- <script type="text/javascript" src="http://192.168.0.100:18080/static/js/li.sso.js"></script> -->
