--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta id="viewport" name="viewport" content="initial-scale=1.0, maximum-scale=1.0" user-scalable="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <!-- <meta id="viewport" name="viewport" content="initial-scale=1.0, maximum-scale=1.0" user-scalable="yes"> -->
     <!-- <meta property="og:title" content="test"/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="http://rootree.net"/>
