chaned '더알림' / 'theAlim'

--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,14 @@
     <meta property="og:description" content="This is a description."/>
     <meta property="og:image" content="http://img.jpg"/> -->
     <meta property="og:locale" content="ko_KR">
-    <meta property="og:title" content="더알림, 구독형 알림">
+    <meta property="og:title" content="모두조인, 구독형 알림">
     <meta property="og:description" content="나한테 꼭 필요한 알림만 선택해서 구독!
     보기 좋게 잘 정리된 알림목록">
     <meta property="og:type" content="website">
     <meta property="og:image" content="http3://mo.d-alim.com/commonAssets/kakaoShareIcon.png">
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="627" />
-    <meta property="og:site_name" content="DAlim - 더알림, 구독형 알림">
+    <meta property="og:site_name" content="DAlim - 모두조인, 구독형 알림">
 
     <!-- <meta name="appleid-signin-client-id" content="com.pushmsg.project"> -->
     <meta name="appleid-signin-client-id" content="project.pushmsg.com">
